--- a/null/src/components/css/Splash.css
+++ b/null/src/components/css/Splash.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: humane;
+    src: url("../../assets/Humane-SemiBold\ \(1\).otf");
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -16,11 +21,6 @@
     z-index: 1;
 }
 
-img {
-    height: 30%;
-
-}
-
 video {
     position: absolute;
     top: 0;
@@ -28,5 +28,100 @@ video {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    z-index: -2;
+    filter: brightness(50%);
+}
+
+.centerText {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+
+    width: 60%;
+    height: 10%;
+    margin: auto;
+}
+
+.header {
+    position: absolute;
+    background-color: rgb(3, 3, 3);
+    top: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    width: 100%;
+    height: 10vh;
+    object-fit: cover;
+}
+
+.headerText {
+    font-size: calc(48px + 0.390625vw);
+    font-family: humane !important;
+    color: rgb(241, 0, 0);
+}
+
+.smFooter {
+    position: absolute;
+    background-color: rgb(3, 3, 3);
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+    width: 100%;
+    height: 10vh;
+    object-fit: cover;
+}
+
+.smIcon {
+    color: rgb(255, 255, 255);
+    padding-top: 5px;
+}
+
+.smIcon:hover {
+    color: rgb(255, 0, 0);
+    transition: .3s;
+    transition-duration: .5s;
+    padding: 5px;
+    transform: scale(1.25);
+}
+
+.circle {
+    margin: auto;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    box-shadow:
+    inset 0 0 50px rgb(255, 255, 255),
+    0 0 50px rgb(255, 255, 255),
+    10px 0 80px rgb(255, 255, 255);
     z-index: -1;
+}
+
+.circle:hover{
+    border-radius: 50%;
+    box-shadow:
+    inset 0 0 50px rgb(151, 79, 56),
+    0 0 50px rgb(255, 72, 0),
+    10px 0 80px rgb(98, 0, 255);
+    transition: .4s;
+    transition-duration: .5s;
+    transform: scale(1.05);
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+  0% { transform: translate(.5px, .5px) rotate(0deg); }
+  10% { transform: translate(-.5px, -.5px) rotate(-.3deg); }
+  /* 20% { transform: translate(-1px, 0px) rotate(.5deg); } */
+  30% { transform: translate(.5px, .5px) rotate(0deg); }
+  40% { transform: translate(.5px, -.5px) rotate(.3deg); }
+  /* 50% { transform: translate(-1px, 2px) rotate(-.5deg); } */
+  60% { transform: translate(-.5px, .5px) rotate(0deg); }
+  70% { transform: translate(.5px, .5px) rotate(-.3deg); }
+  /* 80% { transform: translate(-1px, -1px) rotate(.5deg); } */
+  90% { transform: translate(.5px, .5px) rotate(0deg); }
+  100% { transform: translate(.5px, -.5px) rotate(-.3deg); }
 }
