--- a/null/src/components/css/Splash.css
+++ b/null/src/components/css/Splash.css
@@ -29,7 +29,7 @@ video {
     height: 100%;
     object-fit: cover;
     z-index: -2;
-    filter: brightness(50%);
+    filter: brightness(80%);
 }
 
 .centerText {
@@ -82,29 +82,23 @@ video {
 .smIcon:hover {
     color: rgb(255, 0, 0);
     transition: .3s;
-    transition-duration: .5s;
+    transition-duration: .3s;
     padding: 5px;
     transform: scale(1.25);
 }
 
 .circle {
+    mix-blend-mode: difference;
     margin: auto;
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    box-shadow:
-    inset 0 0 50px rgb(255, 255, 255),
-    0 0 50px rgb(255, 255, 255),
-    10px 0 80px rgb(255, 255, 255);
     z-index: -1;
 }
 
-.circle:hover{
+.circle:hover {
+    filter: contrast(red);
     border-radius: 50%;
-    box-shadow:
-    inset 0 0 50px rgb(151, 79, 56),
-    0 0 50px rgb(255, 72, 0),
-    10px 0 80px rgb(98, 0, 255);
     transition: .4s;
     transition-duration: .5s;
     transform: scale(1.05);
@@ -112,16 +106,37 @@ video {
     animation-iteration-count: infinite;
 }
 
+.circle:hover .enterText{
+    filter: contrast(red);
+    border-radius: 50%;
+    transition: .4s;
+    transition-duration: .5s;
+    transform: scale(1.05);
+    animation: shake 0.5s;
+    animation-iteration-count: infinite;
+    opacity: 100%;
+}
+
 @keyframes shake {
-  0% { transform: translate(.5px, .5px) rotate(0deg); }
+  0% { transform: translate(.9px, 4px) rotate(0deg); }
   10% { transform: translate(-.5px, -.5px) rotate(-.3deg); }
   /* 20% { transform: translate(-1px, 0px) rotate(.5deg); } */
   30% { transform: translate(.5px, .5px) rotate(0deg); }
   40% { transform: translate(.5px, -.5px) rotate(.3deg); }
   /* 50% { transform: translate(-1px, 2px) rotate(-.5deg); } */
-  60% { transform: translate(-.5px, .5px) rotate(0deg); }
+  60% { transform: translate(-2px, .2px) rotate(0deg); }
   70% { transform: translate(.5px, .5px) rotate(-.3deg); }
   /* 80% { transform: translate(-1px, -1px) rotate(.5deg); } */
-  90% { transform: translate(.5px, .5px) rotate(0deg); }
-  100% { transform: translate(.5px, -.5px) rotate(-.3deg); }
+  90% { transform: translate(.9px, .5px) rotate(0deg); }
+  100% { transform: translate(.5px, -.9px) rotate(-.3deg); }
+}
+
+.enterText {
+    opacity: 0%;
+    
+}
+
+.nullLogo {
+    width: 20vh;
+    height: 8vh;
 }
