--- a/null/src/components/css/Splash.css
+++ b/null/src/components/css/Splash.css
@@ -7,6 +7,16 @@
     src: url("../../assets/Humane-Bold\ \(1\).otf");
 }
 
+@media screen and (max-width: 768px) {
+    html,body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -125,7 +135,7 @@ video {
 .sigilModal {
     mix-blend-mode: difference;
     margin: auto;
-    width: 220px;
+    width: 250px;
     height: 200px;
     border-radius: 50%;
     z-index: -1;
