--- a/null/src/components/css/HomePage.css
+++ b/null/src/components/css/HomePage.css
@@ -7,33 +7,10 @@
     src: url("../../assets/Humane-Bold\ \(1\).otf");
 }
 
-@media screen and (max-width: 768px) {
-    html,body {
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden;
-    overflow-y: hidden;
-}
-}
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-html,body {
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden;
-    overflow-y: hidden;
-}
 
 .homepage {
     background-color: rgb(29, 36, 230);
+    overflow-x: scroll;
 }
 
 .modalText {
