--- a/null/src/components/css/Shop.css
+++ b/null/src/components/css/Shop.css
@@ -7,36 +7,88 @@
     src: url("../../assets/Humane-Bold\ \(1\).otf");
 }
 
-@media screen and (max-width: 768px) {
-    html,body {
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden;
-    overflow-y: hidden;
-}
-}
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-html,body {
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden;
-    overflow-y: hidden;
-}
-
-.shop {
-    width: 100%;
-    height: 100vh;
-}
-
 .shopCards {
-    padding: 5px;
+    box-shadow: 0 0 10px 5px gray;
+    min-width: 28rem;
+    display: flex;
+}
+
+.shopImg {
+    width: 16rem;
+    height: 20rem;
+}
+
+.shopCardText {
+    margin: 1rem;
+    margin-right: 1rem;
+    font-size: 1rem;
+    flex-grow: 1;
+}
+
+.shoptitle {
+    line-height: 1.4rem;
+    margin-bottom: 0.5rem;
+    font-size: 1rem;
+    font-weight: bold;
+    padding-top: 1rem;
+    margin-top: 1rem;
+}
+
+.shopBody {
+    line-height: 1.2rem;
+    margin-bottom: 1rem;
+}
+
+.shopPrice {
+    font-size: 1.4rem;
+    margin-top: .6rem;
+}
+
+.shopBtn {
+    border: none;
+    background-color: transparent;
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: bold;
+    color: inherit;
+    width: 100%;
+    padding-top: 1rem;
+    margin-top: 1rem;
+    cursor: pointer;
+}
+
+.shopBtn:hover {
+    color:red;
+    transition: .3s;
+    transform: scale(1.25);
+}
+
+.shopCardContainer {
+    padding-top: 4rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    display: grid;
+    gap: 1rem;
+    grid-template: 1fr;
+    justify-self: center;
+
+}
+
+@media screen and (min-width:600px) {
+    .shopCardContainer {
+        grid-template-columns: repeat(auto-fit, minmax(14rem, 16rem));
+        padding-left: 5rem;
+        padding-right: 5rem;
+    }
+    
+    .shopCards {
+        flex-direction: column;
+        text-align: center;
+        min-width: 14rem;
+    }
+
+    .shopImg {
+        width: 100%;
+        height: 20rem;
+    }
 }
