--- a/null/src/components/css/Shows.css
+++ b/null/src/components/css/Shows.css
@@ -7,43 +7,88 @@
     src: url("../../assets/Humane-Bold\ \(1\).otf");
 }
 
-@media screen and (max-width: 768px) {
-    html,body {
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden;
-    overflow-y: hidden;
-}
-}
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-html,body {
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden;
-    overflow-y: hidden;
-}
-
-.shows {
-    width: 100%;
-    height: 100vh;
-}
-
 .showCards {
-    padding: 5px;
+    box-shadow: 0 0 10px 5px gray;
+    min-width: 28rem;
+    display: flex;
+}
+
+.showImg {
+    width: 16rem;
+    height: 20rem;
 }
 
 .showCardText {
-    font-size: calc(16px + 0.390625vw);
-    color: rgb(241, 0, 0);
-    z-index: 2;
-    filter: drop-shadow(0 0px 1px);
+    margin: 1rem;
+    margin-right: 1rem;
+    font-size: 1rem;
+    flex-grow: 1;
+}
+
+.showTitle {
+    line-height: 1.4rem;
+    margin-bottom: 0.5rem;
+    font-size: 1rem;
+    font-weight: bold;
+    padding-top: 1rem;
+    margin-top: 1rem;
+}
+
+.showBody {
+    line-height: 1.2rem;
+    margin-bottom: 1rem;
+}
+
+.showPrice {
+    font-size: 1.4rem;
+    margin-top: .6rem;
+}
+
+.showBtn {
+    border: none;
+    background-color: transparent;
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: bold;
+    color: inherit;
+    width: 100%;
+    padding-top: 1rem;
+    margin-top: 1rem;
+    cursor: pointer;
+}
+
+.showBtn:hover {
+    color:red;
+    transition: .3s;
+    transform: scale(1.25);
+}
+
+.showCardContainer {
+    padding-top: 4rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    display: grid;
+    gap: 1rem;
+    grid-template: 1fr;
+    justify-self: center;
+
+}
+
+@media screen and (min-width:600px) {
+    .showCardContainer {
+        grid-template-columns: repeat(auto-fit, minmax(14rem, 16rem));
+        padding-left: 5rem;
+        padding-right: 5rem;
+    }
+    
+    .showCards {
+        flex-direction: column;
+        text-align: center;
+        min-width: 14rem;
+    }
+
+    .showImg {
+        width: 100%;
+        height: 20rem;
+    }
 }
