--- a/null/src/components/css/Splash.css
+++ b/null/src/components/css/Splash.css
@@ -7,34 +7,26 @@
     src: url("../../assets/Humane-Bold\ \(1\).otf");
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 748px) {
     html,body {
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden;
-    overflow-y: hidden;
-}
+  }
 }
 
-* {
-    margin: 0;
-    padding: 0;
-}
-
-html,body {
+.main {
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden;
-    overflow-y: hidden;
 }
 
 .splash {
     width: 100%;
     height: 100vh;
+
 }
 
 .section {
@@ -54,6 +46,7 @@ video {
     object-fit: cover;
     z-index: -2;
     filter: brightness(80%);
+
 }
 
 .centerText {
@@ -67,18 +60,6 @@ video {
     margin: auto;
 }
 
-.header {
-    position: absolute;
-    background-color: rgb(3, 3, 3);
-    top: 0;
-    right: 0;
-    left: 0;
-    margin: auto;
-    width: 100%;
-    height: 10vh;
-    object-fit: cover;
-}
-
 .headerText {
     font-size: calc(48px + 0.390625vw);
     font-family: humaneBold !important;
@@ -86,6 +67,15 @@ video {
     z-index: 2;
     letter-spacing: 2px;
     filter: drop-shadow(0 0px 1px);
+}
+
+.centerBtn {
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .buttonText {
@@ -97,31 +87,6 @@ video {
 .buttonText:hover {
     animation: shake2 0.5s;
     animation-iteration-count: infinite;
-}
-
-.smFooter {
-    position: absolute;
-    background-color: rgb(3, 3, 3);
-    bottom: 0;
-    right: 0;
-    left: 0;
-    margin: auto;
-    width: 100%;
-    height: 10vh;
-    object-fit: cover;
-}
-
-.smIcon {
-    color: rgb(255, 255, 255);
-    padding-top: 5px;
-}
-
-.smIcon:hover {
-    color: rgb(255, 0, 0);
-    transition: .3s;
-    transition-duration: .3s;
-    padding: 5px;
-    transform: scale(1.25);
 }
 
 .nullLogo {
