--- a/null/src/css/Splash.css
+++ b/null/src/css/Splash.css
@@ -14,7 +14,8 @@
 
 .splash {
     width: 100%;
-    height: 100vh;
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
 
 }
 
