--- a/null/src/css/Splash.css
+++ b/null/src/css/Splash.css
@@ -32,11 +32,11 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
     object-fit: cover;
     z-index: -2;
     filter: brightness(80%);
-
 }
 
 .centerText {
