--- a/null/src/css/MailingList.css
+++ b/null/src/css/MailingList.css
@@ -11,7 +11,7 @@
 .modalText {
     font-size: calc(48px + 0.390625vw);
     font-family: humaneBold !important;
-    color: #0f028d;
+    color: #000000;
     z-index: 2;
     letter-spacing: 2px;
     filter: drop-shadow(0 0px 1px);
@@ -33,19 +33,19 @@
     text-align: center;
     margin: 5px;
     font-family: humane !important;
-    color: aliceblue;
+    color: rgb(0, 0, 0);
     font-size: 24px;
     letter-spacing: 2px;
 }
 
 @media screen and (min-width: 600px) {
     form {
-        width: 75%;
+        width: 100%;
     }
 }
 @media screen and (min-width: 800px) {
     form {
-        width: 70%;
+        width: 75%;
     }
 }
 @media screen and (min-width: 1000px) {
@@ -70,18 +70,18 @@ input {
     margin-top: 3px;
     margin-bottom: 3px;
     border-radius: 4px;
-    border: 2px solid #8e86d5;
-    background-color: black;
-    color: aliceblue;
+    border: 2px solid #ff0000;
+    background-color: aliceblue;
+    color: rgb(0, 0, 0);
     font-family: nerv-font !important;
-    font-size: 18px;
+    font-size: 14px;
     letter-spacing: 2px;
 }
 
 .mailingListButtonText {
     font-size: 24px;
-    font-family: humane !important;
-    color: #8e86d5;
+    font-family: nerv-font !important;
+    color: #ff0000;
 }
 
 .buttonText:hover {
@@ -90,9 +90,9 @@ input {
 }
 
 .mailingListText {
-    font-size: calc(48px + 0.390625vw);
-    font-family: humane !important;
-    color: #8e86d5;
+    font-size: 16px;
+    font-family: nerv-font !important;
+    color: #ff0000;
     z-index: 2;
     letter-spacing: 2px;
     filter: drop-shadow(0 0px 1px);
