--- a/null/src/css/NotFound.css
+++ b/null/src/css/NotFound.css
@@ -25,7 +25,7 @@
     left: 0;
     width: 100%;
     font-size: 24px;
-    color: #8e86d5;
+    color: #ff0000;
     z-index: 2;
     letter-spacing: 2px;
     filter: drop-shadow(0 0px 1px);
