--- a/null/src/css/Shows.css
+++ b/null/src/css/Shows.css
@@ -69,6 +69,8 @@
 
 }
 
+
+
 @media screen and (min-width: 825px) {
     .showCardContainer {
     margin-top: 2em;
@@ -82,17 +84,90 @@
 }
 
 @media only screen and (min-width: 1400px) {
-    .showImg {
+    .currentImg {
         width: 60%;
     }
 }
 
-.showImg {
+@media only screen and (min-width: 1400px) {
+    .pastImg {
+        width: 40%;
+    }
+}
+
+.currentImg {
     transition: 0.3s;
     width: 100%;
 }
 
-.showImg:hover {
+.currentImg:hover {
     filter:invert(1);
     transform: skew(-2deg, -1deg);
+}
+
+@media only screen and (max-width: 600px) {
+    .pastCardContainer {
+        padding-left: 1em;
+        padding-right: 1em;
+        padding-top: 5em;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    .pastCardContainer {
+        padding-left: 3em;
+        padding-right: 3em;
+        padding-top: 5em;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .pastCardContainer {
+        padding-left: 4em;
+        padding-right: 4em;
+        padding-top: 5em;
+    }
+}
+
+@media only screen and (min-width: 992px) {
+    .pastCardContainer {
+        padding-left: 4em;
+        padding-right: 4em;
+        padding-top: 5em;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    .pastCardContainer {
+        padding: 5em;
+    }
+}
+
+@media only screen and (min-width: 1400px) {
+    .pastCardContainer {
+        justify-content: center;
+        text-align: center;
+
+    }
+}
+
+.pastCardContainer {
+    columns: 4;
+}
+
+@media screen and (min-width: 825px) {
+    .pastShowCardContainer {
+    margin-top: 0em;
+    margin-bottom: 0em;
+    }
+}
+
+.pastShowCardContainer {
+    filter: drop-shadow(0px 0px 5px);
+
+}
+
+.pastImg {
+    filter:invert(1);
+    width: 100%;
 }
