--- a/null/src/css/Splash.css
+++ b/null/src/css/Splash.css
@@ -53,7 +53,7 @@
 .headerText {
     width: 100%;
     font-size: 24px;
-    color: #8e86d5;
+    color: #ff0000;
     z-index: 2;
     letter-spacing: 2px;
     filter: drop-shadow(0 0px 1px);
