turn url into redirect

--- a/null/src/css/Footer.css
+++ b/null/src/css/Footer.css
@@ -4,7 +4,7 @@
     position: fixed;
     z-index: 4;
     mix-blend-mode: difference;
-    color: #ff0000;
+    color: #10BEFF;
     bottom: 0;
 
 }
