--- a/null/src/css/Splash.css
+++ b/null/src/css/Splash.css
@@ -27,17 +27,12 @@
     z-index: 1;
 }
 
-.video-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
-    height: calc(var(--vh, 1vh) * 100);
-    object-fit: cover;
-    z-index: -2;
-    filter: brightness(80%);
-}
+.background-image {
+    background-image: url("../imgs/burial_band.png");
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; 
+} 
 
 .centerText {
     position: absolute;
@@ -53,7 +48,7 @@
 .headerText {
     width: 100%;
     font-size: 24px;
-    color: #ff0000;
+    color: #10BEFF;
     z-index: 2;
     letter-spacing: 2px;
     filter: drop-shadow(0 0px 1px);
@@ -86,33 +81,33 @@
     animation-iteration-count: infinite;
 }
 
-@keyframes shake {
+/* @keyframes shake {
   0% { transform: translate(.9px, 4px) rotate(0deg); }
   10% { transform: translate(-.5px, -.5px) rotate(-.3deg); }
   /* 20% { transform: translate(-1px, 0px) rotate(.5deg); } */
-  30% { transform: translate(.5px, .5px) rotate(0deg); }
-  40% { transform: translate(.5px, -.5px) rotate(.3deg); }
+  /* 30% { transform: translate(.5px, .5px) rotate(0deg); } */
+  /* 40% { transform: translate(.5px, -.5px) rotate(.3deg); } */
   /* 50% { transform: translate(-1px, 2px) rotate(-.5deg); } */
-  60% { transform: translate(-2px, .2px) rotate(0deg); }
-  70% { transform: translate(.5px, .5px) rotate(-.3deg); }
+  /* 60% { transform: translate(-2px, .2px) rotate(0deg); } */
+  /* 70% { transform: translate(.5px, .5px) rotate(-.3deg); } */
   /* 80% { transform: translate(-1px, -1px) rotate(.5deg); } */
-  90% { transform: translate(.9px, .5px) rotate(0deg); }
-  100% { transform: translate(.5px, -.9px) rotate(-.3deg); }
-}
+  /* 90% { transform: translate(.9px, .5px) rotate(0deg); } */
+  /* 100% { transform: translate(.5px, -.9px) rotate(-.3deg); } */
+/* } */
 
-@keyframes shake2 {
-  0% { transform: translate(.2px, 4px) rotate(0deg); }
-  10% { transform: translate(-.5px, -.5px) rotate(-.3deg); }
+/* @keyframes shake2 { */
+  /* 0% { transform: translate(.2px, 4px) rotate(0deg); } */
+  /* 10% { transform: translate(-.5px, -.5px) rotate(-.3deg); } */
   /* 20% { transform: translate(-1px, 0px) rotate(.5deg); } */
-  30% { transform: translate(.5px, .5px) rotate(0deg); }
-  40% { transform: translate(.5px, -.5px) rotate(.3deg); }
+  /* 30% { transform: translate(.5px, .5px) rotate(0deg); } */
+  /* 40% { transform: translate(.5px, -.5px) rotate(.3deg); } */
+  /* 60% { transform: translate(-2px, .2px) rotate(0deg); } */
   /* 50% { transform: translate(-1px, 2px) rotate(-.5deg); } */
-  60% { transform: translate(-2px, .2px) rotate(0deg); }
-  70% { transform: translate(.5px, .5px) rotate(-.3deg); }
+  /* 70% { transform: translate(.5px, .5px) rotate(-.3deg); } */
   /* 80% { transform: translate(-1px, -1px) rotate(.5deg); } */
-  90% { transform: translate(.3px, .5px) rotate(0deg); }
-  100% { transform: translate(.5px, -.3px) rotate(-.3deg); }
-}
+  /* 90% { transform: translate(.3px, .5px) rotate(0deg); } */
+  /* 100% { transform: translate(.5px, -.3px) rotate(-.3deg); } */
+/* } */ */
 
 button {
     width: 100%;
