--- a/null/src/css/Splash.css
+++ b/null/src/css/Splash.css
@@ -29,8 +29,8 @@
 
 .background-image {
     background-image: url("../imgs/burial_band.png");
-    background-position: center; /* Center the image */
-    background-repeat: no-repeat; /* Do not repeat the image */
+    background-position: center; 
+    background-repeat: no-repeat; 
     background-size: cover; 
 } 
 
@@ -80,34 +80,6 @@
     animation: shake 0.5s;
     animation-iteration-count: infinite;
 }
-
-/* @keyframes shake {
-  0% { transform: translate(.9px, 4px) rotate(0deg); }
-  10% { transform: translate(-.5px, -.5px) rotate(-.3deg); }
-  /* 20% { transform: translate(-1px, 0px) rotate(.5deg); } */
-  /* 30% { transform: translate(.5px, .5px) rotate(0deg); } */
-  /* 40% { transform: translate(.5px, -.5px) rotate(.3deg); } */
-  /* 50% { transform: translate(-1px, 2px) rotate(-.5deg); } */
-  /* 60% { transform: translate(-2px, .2px) rotate(0deg); } */
-  /* 70% { transform: translate(.5px, .5px) rotate(-.3deg); } */
-  /* 80% { transform: translate(-1px, -1px) rotate(.5deg); } */
-  /* 90% { transform: translate(.9px, .5px) rotate(0deg); } */
-  /* 100% { transform: translate(.5px, -.9px) rotate(-.3deg); } */
-/* } */
-
-/* @keyframes shake2 { */
-  /* 0% { transform: translate(.2px, 4px) rotate(0deg); } */
-  /* 10% { transform: translate(-.5px, -.5px) rotate(-.3deg); } */
-  /* 20% { transform: translate(-1px, 0px) rotate(.5deg); } */
-  /* 30% { transform: translate(.5px, .5px) rotate(0deg); } */
-  /* 40% { transform: translate(.5px, -.5px) rotate(.3deg); } */
-  /* 60% { transform: translate(-2px, .2px) rotate(0deg); } */
-  /* 50% { transform: translate(-1px, 2px) rotate(-.5deg); } */
-  /* 70% { transform: translate(.5px, .5px) rotate(-.3deg); } */
-  /* 80% { transform: translate(-1px, -1px) rotate(.5deg); } */
-  /* 90% { transform: translate(.3px, .5px) rotate(0deg); } */
-  /* 100% { transform: translate(.5px, -.3px) rotate(-.3deg); } */
-/* } */ */
 
 button {
     width: 100%;
